SourceMetaData/src/objects/Ticket__c.object
<CustomObject>
    <fields>
        <fullName>FOI_Exemption__c</fullName>
        <inlineHelpText>Exemption reason for why an FOI cannot be processed. See knowledge article for reason explanations.</inlineHelpText>
        <label>FOI Exemption</label>
        <picklist>
            <controllingField>GLOBAL_Closing_Code__c</controllingField>
            <picklistValues>
                <fullName>Section 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 37</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 38</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 41</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 42</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 43</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 44</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>FOI_Type__c</fullName>
        <inlineHelpText>Type of Information request:
Freedom of Information Request
Environmental Information Request
Service Access Request
Data Protection Act</inlineHelpText>
        <label>RFI Type</label>
        <picklist>
            <picklistValues>
                <fullName>FOI</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>EIR</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>SAR</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>DPA</fullName>
                <color>#A845DC</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLOBALAuto_SLA_Breach_Email_to_EscEmail__c</fullName>
        <description>The Date/Time that the auto SLA Breach email was sent to the escalation email address, blank if none has been sent to this address</description>
        <inlineHelpText>The Date/Time that the auto SLA Breach email was sent to the escalation email address, blank if none has been sent to this address</inlineHelpText>
        <label>Auto SLA Breach Email Sent to Esc Email</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the ticket been acknowedged</description>
        <inlineHelpText>Has the ticket been acknowedged</inlineHelpText>
        <label>Ticket Acknowledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Acknowledgement_Needed_By__c</fullName>
        <description>The date at which an acknowledgement should have been sent for the ticket.</description>
        <formula>GLOBAL_Received_Date__c + GLOBAL_Days_to_Acknowledge__c</formula>
        <inlineHelpText>The date at which an acknowledgement should have been sent for the ticket.</inlineHelpText>
        <label>Acknowledgement Needed By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Active_SLA__c</fullName>
        <description>A list of the current active SLAs that can be applied to this record</description>
        <inlineHelpText>A list of the current active SLAs that can be applied to this record</inlineHelpText>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>2 Working Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Working Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Working Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 Working Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40 Working Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40 Calendar Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Working Days (1 Day Escalation)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2 - Chidlren&apos;s Social Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 1 - Children&apos;s Social Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 1 - Adult&apos;s Social Care</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Additional_Info__c</fullName>
        <inlineHelpText>Additional Information</inlineHelpText>
        <label>Additional Info</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Assigned_Management_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Management team that are responsible for the service team that have been assigned the ticket.</description>
        <inlineHelpText>The Management team that are responsible for the service team that have been assigned the ticket (eg when ticket Escalates or Breaches this team will be notified if an email address is associated with them).</inlineHelpText>
        <label>Assigned Management Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Tickets (Assigned Management Team)</relationshipLabel>
        <relationshipName>ManagingTickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Assigned_Service_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The service team to which the ticket has been assigned to.</description>
        <inlineHelpText>The service team to which the ticket has been assigned to.</inlineHelpText>
        <label>Assigned Service Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Assigned Tickets</relationshipLabel>
        <relationshipName>AssingedTickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Auto_Esc_Email_Sent_to_Owner__c</fullName>
        <description>The Date/Time that the auo escalation email was sent, blank if none has been sent to the ticket owner</description>
        <inlineHelpText>The Date/Time that the auo escalation email was sent, blank if none has been sent to the ticket owner</inlineHelpText>
        <label>Auto Esc Email Sent to Owner</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Auto_Esc_Email_to_Esc_Email__c</fullName>
        <description>The Date/Time that the auo escalation email was sent to the escalation email address, blank if none has been sent to the escalation email address</description>
        <inlineHelpText>The Date/Time that the auo escalation email was sent to the escalation email address, blank if none has been sent to the escalation email address</inlineHelpText>
        <label>Auto Esc Email Sent to Escalation Email</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Auto_SLA_Breach_Sent_Owner__c</fullName>
        <description>The Date/Time that the auto SLA Breach email was sent to the ticket owner, blank if none has been sent</description>
        <inlineHelpText>The Date/Time that the auto SLA Breach email was sent to the ticket owner, blank if none has been sent</inlineHelpText>
        <label>Auto SLA Breached Email Sent to Owner</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Calendar_Days_Elapsed__c</fullName>
        <description>Number of calendar days during which the Ticket was opened or escalated</description>
        <inlineHelpText>Number of calendar days during which the Ticket was opened or escalated</inlineHelpText>
        <label>Calendar Days Elapsed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Closed_Date__c</fullName>
        <inlineHelpText>Ticket was closed on this date (blank for not-closed ticket)</inlineHelpText>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Closing_Code__c</fullName>
        <description>The detailed closing status of the ticket.</description>
        <inlineHelpText>The detailed closing status of the ticket.</inlineHelpText>
        <label>Closing Code</label>
        <picklist>
            <controllingField>GLOBAL_Ticket_Status__c</controllingField>
            <picklistValues>
                <fullName>Complaint - Not upheld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disclosed in full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICO advised not to disclose as exemptions or exceptions apply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICO advised to disclosed in Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICO advised to partially disclose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information held by another organisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information not held</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information not provided as exemption applied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information provided in full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a valid complaint - other regulatory/statutory process should be followed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a valid complaint - objecting against an agreed policy or process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not disclosed exemptions or exceptions apply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially disclosed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial response as some exemption applied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial response as some information not held</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premature enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved Complaint - Upheld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved Complaint - Upheld in Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could not reproduce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled by Reporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Answered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplication - Record Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not upheld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside jurisdiction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially upheld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed  to other agency</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Closing_Details__c</fullName>
        <description>Area to record details of how/ why the ticket was closed. Only editable for tickets with a closed status</description>
        <inlineHelpText>Area to record details of how/ why the ticket was closed. Only editable for tickets with a closed status</inlineHelpText>
        <label>Closing Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Compensation_Amount__c</fullName>
        <description>The amount of Compensation awarded</description>
        <inlineHelpText>The amount of Compensation awarded</inlineHelpText>
        <label>Compensation Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Continuous_Working_Days_on_Hold__c</fullName>
        <description>Number of continuous working days Ticket has been on Hold</description>
        <inlineHelpText>Number of continuous working days Ticket has been on Hold</inlineHelpText>
        <label>Continuous Working Days on Hold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Customer_Curr_Correspondence_Addr__c</fullName>
        <formula>SUBSTITUTE(GLOBAL_Goal__r.Contact_Correspondence_Address__c,&apos;,&apos;,BR())</formula>
        <label>Customer Current Primary Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Customer_Email__c</fullName>
        <formula>GLOBAL_Goal__r.Contact.Email</formula>
        <label>Customer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Customer_Flagged__c</fullName>
        <formula>GLOBAL_Goal__r.Contact_Flagged__c</formula>
        <inlineHelpText>Has the customer been flagged?</inlineHelpText>
        <label>Customer Flagged</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Customer_Id__c</fullName>
        <description>For use when identifying customer ID from a ticket.</description>
        <formula>GLOBAL_Goal__r.Contact.Id</formula>
        <label>Customer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Customer_Mobile__c</fullName>
        <formula>GLOBAL_Goal__r.Contact.MobilePhone</formula>
        <inlineHelpText>Customer&apos;s mobile phone number.</inlineHelpText>
        <label>Customer Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Customer_Name__c</fullName>
        <formula>GLOBAL_Goal__r.Contact.Salutation_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Customer_Phone_Number__c</fullName>
        <formula>GLOBAL_Goal__r.Contact.HomePhone</formula>
        <inlineHelpText>Customer&apos;s home phone number.</inlineHelpText>
        <label>Customer Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Customer_Preferred_Contact_Method__c</fullName>
        <formula>TEXT(GLOBAL_Goal__r.Preferred_Contact_Method__c)</formula>
        <label>Customer Preferred Contact Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Customer_Representative__c</fullName>
        <description>If the customer is not representing themselves for this goal who has reported this goal on behalf of the customer</description>
        <formula>GLOBAL_Goal__r.REP_Customer_Representative__r.Salutation_Full_Name__c</formula>
        <inlineHelpText>If the customer is not representing themselves for this goal who has reported this goal on behalf of the customer</inlineHelpText>
        <label>Representative Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Customer_Work_Phone__c</fullName>
        <formula>GLOBAL_Goal__r.Contact.OtherPhone</formula>
        <inlineHelpText>Customer&apos;s work phone number.</inlineHelpText>
        <label>Customer Work Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The customer who has reported the case that this record is a child of</description>
        <inlineHelpText>The customer who has reported the case that this record is a child of</inlineHelpText>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Date_Acknowledged__c</fullName>
        <description>Date that the ticket was acknowledged</description>
        <inlineHelpText>Date that the ticket was acknowledged</inlineHelpText>
        <label>Date Acknowledged</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Date_Resolved__c</fullName>
        <description>Ticket was resolved on this date</description>
        <inlineHelpText>Ticket was resolved on this date</inlineHelpText>
        <label>Resolved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Days_to_Acknowledge__c</fullName>
        <defaultValue>2</defaultValue>
        <description>The number of working days that a complaint has to be acknowledged by after it has been submitted</description>
        <inlineHelpText>The number of working days that a complaint has to be acknowledged by after it has been submitted</inlineHelpText>
        <label>Days to Acknowledge</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Escalation_Email__c</fullName>
        <description>Escalation email address. Updated by trigger, and based on the owner queue.</description>
        <label>Escalation Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Feedback_Cutoff_Date__c</fullName>
        <description>The latest date at which the customer cna provide feedback or request that a closed ticket is re-opened</description>
        <inlineHelpText>The latest date at which the customer cna provide feedback or request that a closed ticket is re-opened (3 working days after closed date)</inlineHelpText>
        <label>Feedback Cutoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Finance_Sub_Type__c</fullName>
        <label>Secondary Type</label>
        <picklist>
            <controllingField>GLOBAL_Type__c</controllingField>
            <picklistValues>
                <fullName>Mid-yr Virement Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Loads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant Returns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Monitoring / Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Setting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Closing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year End</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planner Report Adjustments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad hoc Query</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reserve / Funding Drawing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correction / Adjustments (Journal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Charge between Departments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virements / Journals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analysis work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service / Business Plan Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Case Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 251</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO Statutory Returns</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Goal_Channel__c</fullName>
        <description>The Channel that the Case originated from</description>
        <formula>TEXT( GLOBAL_Goal__r.Origin )</formula>
        <inlineHelpText>The Channel that the Case originated from</inlineHelpText>
        <label>Case Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Goal_Creation_DateTime__c</fullName>
        <description>The Date Time that the parent case was created</description>
        <formula>GLOBAL_Goal__r.CreatedDate</formula>
        <inlineHelpText>The Date Time that the parenet case was created</inlineHelpText>
        <label>Case Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Goal_Preferred_Contact_Method__c</fullName>
        <description>The preferred contact method for the parent Case</description>
        <formula>TEXT(GLOBAL_Goal__r.Preferred_Contact_Method__c)</formula>
        <inlineHelpText>The preferred contact method for the parent Case</inlineHelpText>
        <label>Preferred Contact Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Goal_Priority__c</fullName>
        <formula>TEXT(GLOBAL_Goal__r.Priority)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Goal_Summary__c</fullName>
        <formula>GLOBAL_Goal__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Goal__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The CRM Case that the ticket is related to.</description>
        <inlineHelpText>The CRM Case that the ticket  is related to.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GLOBAL_IsReopenTicket__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ticket was Reopened via pressing a button. Field is used in a workflow rule and doesn&apos;t need to be on the layout</description>
        <inlineHelpText>Ticket was Reopened</inlineHelpText>
        <label>Reopened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Lessons_Learnt_Other__c</fullName>
        <description>A free text area to record the lesson learnt if the drop-down does not contain a suitable value</description>
        <inlineHelpText>A free text area to record the lesson learnt if the drop-down does not contain a suitable value</inlineHelpText>
        <label>Lessons Learnt Other</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Lessons_Learnt__c</fullName>
        <description>The lessons that have been learnt</description>
        <inlineHelpText>The lessons that have been learnt</inlineHelpText>
        <label>Lessons Learnt</label>
        <picklist>
            <picklistValues>
                <fullName>Amend procedure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info not on Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New procedure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Action required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reminder to Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report to Members</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff training Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GLOBAL_No_of_targets__c</fullName>
        <description>The number of targets that belong to this ticket. This will be enforced to only be 0 or 1 with a validation rule</description>
        <inlineHelpText>The number of targets that belong to this ticket. This will be enforced to only be 0 or 1 with a validation rule</inlineHelpText>
        <label>No of targets</label>
        <summaryForeignKey>Target__c.Ticket__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GLOBAL_On_Hold_Reason__c</fullName>
        <inlineHelpText>Why has the ticket been put on hold?</inlineHelpText>
        <label>On Hold Reason</label>
        <picklist>
            <controllingField>GLOBAL_Ticket_Status__c</controllingField>
            <picklistValues>
                <fullName>Clarification on request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request to Re-define requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identity Verification Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Opened_Date__c</fullName>
        <description>The date that the ticket was opened (Start of SLA countdown)</description>
        <inlineHelpText>Ticket status was changed to Open on this date. (Start of SLA countdown)</inlineHelpText>
        <label>Opened Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Owner_Email__c</fullName>
        <description>The email address of the current owner (user or queue) of the record. Used to dispatch pdf</description>
        <formula>&quot;To Delete&quot;</formula>
        <inlineHelpText>The email address of the current owner (user or queue) of the record. Used to dispatch pdf</inlineHelpText>
        <label>Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Received_Date__c</fullName>
        <description>Date when communication was received</description>
        <inlineHelpText>Date when communication was received</inlineHelpText>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Reply_Sent_Date__c</fullName>
        <description>The date at which the reply from the service team was sent to the customer. Used to calculate KPIs</description>
        <inlineHelpText>The date at which the reply from the service team was sent to the customer.</inlineHelpText>
        <label>Reply Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Representative_Contact_Method__c</fullName>
        <description>The preferred contact method of the customers representative (as exprressed on the person account record)</description>
        <formula>GLOBAL_Goal__r.REP_Representative_Contact_Method__c</formula>
        <inlineHelpText>The preferred contact method of the customers representative (as exprressed on the person account record)</inlineHelpText>
        <label>Representative Pref Contact Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Representative_Corr_Address__c</fullName>
        <description>The current correspondence address of the customer&apos;s representative</description>
        <formula>SUBSTITUTE(GLOBAL_Goal__r.REP_Representative_Address__c,&apos;,&apos;,BR())</formula>
        <inlineHelpText>The current correspondence address of the customer&apos;s representative</inlineHelpText>
        <label>Representative Primary Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Representative_Email__c</fullName>
        <description>The email address of the customers representative</description>
        <formula>GLOBAL_Goal__r.REP_Customer_Representative__r.Email</formula>
        <inlineHelpText>The email address of the customers representative</inlineHelpText>
        <label>Representative Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Representative_Home_Phone__c</fullName>
        <description>Home phone of customer&apos;s representative</description>
        <formula>GLOBAL_Goal__r.REP_Representative_Home_Phone__c</formula>
        <inlineHelpText>Home phone of customer&apos;s representative</inlineHelpText>
        <label>Representative Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Representative_Mobile_No__c</fullName>
        <description>The current mobile number of the customer&apos;s representative</description>
        <formula>GLOBAL_Goal__r.REP_Representative_Mobile_Phone__c</formula>
        <inlineHelpText>The current mobile number of the customer&apos;s representative</inlineHelpText>
        <label>Representative Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Representative_Type__c</fullName>
        <description>The type of record the customers representative has</description>
        <formula>GLOBAL_Goal__r.REP_Representative_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The type of record the customers representative has</inlineHelpText>
        <label>Representative Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Representative_Used__c</fullName>
        <description>True if the customer is being represented by a third party</description>
        <formula>GLOBAL_Goal__r.REP_Representative_Used__c</formula>
        <inlineHelpText>True if the customer is being represented by a third party</inlineHelpText>
        <label>Representative Used</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>